--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 server.port=8140
 
+#Spring boot \uC5D0\uC11C jpa, hibernate log\uB97C \uBCF4\uAE30\uC704\uD55C \uC124\uC815.
 spring.jpa.show-sql=true
 
-#mysql ???? ?? ??
+#mysql \uCFFC\uB9AC\uB85C \uC0DD\uC131
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#mssql ???? ?? ??
+#mssql \uCFFC\uB9AC\uB85C \uC0DD\uC131
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-# ? ?? ??? - ?? ??? ? ?? ??
+#H2 Console \uC0AC\uC6A9\uD558\uB3C4\uB85D \uBCC0\uACBD
 spring.h2.console.enabled=true
 
 spring.profiles.include=oauth
+
+#\uC138\uC158 \uACF5\uC720 (DB \uC800\uC7A5 \uBC29\uC2DD)
+spring.session.store-type=jdbc
