JOB Finish 02 - application.properties - mysql version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8140
 spring.jpa.show-sql=true
 
 #mysql \uCFFC\uB9AC\uB85C \uC0DD\uC131
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #mssql \uCFFC\uB9AC\uB85C \uC0DD\uC131
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #H2 Console \uC0AC\uC6A9\uD558\uB3C4\uB85D \uBCC0\uACBD
 spring.h2.console.enabled=true
 
