--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,9 @@ dependencies {
 
     implementation('org.springframework.security:spring-security-test')
 
-    implementation('org.maridb.jdbc:mariadb-java-client')
+    implementation('org.mariadb.jdbc:mariadb-java-client')
+
+    implementation('mysql:mysql-connector-java')
 
 
     // 프로젝트 생성시 자동 생성됨
