--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 jdk:
   - openjdk8
+
 branches:
   only:
     - master
@@ -11,10 +12,10 @@ cache:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
-script: "./gradle2 clean build"
+script: "./gradlew clean build"
 
 #CI 실행 완료 시 메일로 알람
 notifications:
   email:
     recipients:
-      windguy1999@gmail.com
+      - windguy1999@gmail.com
